# plezaro

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
demo/: demo.md  test.plr
docs/: docs.tex
include/internal/: lex.hh  log.hh
src/: lex.cc  main.cc  main.cpp
